#0000 fixed "backface-visibility: hidden;" prop;

--- a/client/index.css
+++ b/client/index.css
@@ -94,14 +94,8 @@ h3 {
 
 .flip-card {
   background-color: transparent;
-  /*width: 300px;*/
-  /*height: 300px;*/
   perspective: 1000px;
 }
-
-/*.flip-card:hover .flip-card-inner {*/
-/*    transform: rotateY(180deg);*/
-/*}*/
 
 .flip-card-inner {
   border-radius: 10px;
@@ -111,7 +105,6 @@ h3 {
   transition: transform 1.2s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  /*user-select: none;*/
 }
 .flip-card-inner.active {
   transform: rotateY(180deg);
@@ -119,11 +112,11 @@ h3 {
 .flip-card-front {
   background: white;
 }
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
 }
 
 .flip-card-back {
@@ -161,7 +154,6 @@ h3 {
   height: 100%;
   display: flex;
   flex-direction: column;
-  backface-visibility: hidden;
 }
 
 .wrong-answer-title {
@@ -226,6 +218,7 @@ h3 {
   width: 100%;
   display: flex;
   justify-content: center;
+  backface-visibility: hidden;
 }
 .card-image img {
   height: 100%;
